--- a/Interfaces/da.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/da.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Når nye ulæste artikler er modtaget:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Andet...";
+"FiK-E7-RnG.title" = "Andet…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Tjek for nyere versioner af Vienna ved opstart";
