--- a/Interfaces/de.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/de.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Wenn neue ungelesene Artikel empfangen wurden:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Auswählen...";
+"FiK-E7-RnG.title" = "Auswählen…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Beim Start nach neuer Vienna-Version suchen";
