--- a/Interfaces/eu.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/eu.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Artikulu berri irakurri gabeak jasotzerakoan";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Besteak...";
+"FiK-E7-RnG.title" = "Besteak…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Check for newer versions of Vienna on start up";
