--- a/Interfaces/gl.lproj/Localizable.strings
+++ b/Interfaces/gl.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 "Mark Unflagged" = "Quitar marcas";
 "Articles" = "Artigos";
 "Folders" = "Cartafpñes";
-"Loading %@..." = "Cargando %@...";
+"Loading %@…" = "Cargando %@…";
 "Completed" = "Completado";
 "Refresh RSS feeds" = "Actualizar as subscricións";
 "Refresh All Subscriptions" = "Actualizar todas as subscricións";
@@ -57,7 +57,7 @@
 "Refresh all your subscriptions" = "Actualizar todas as subscricións";
 "New style title" = "Vienna instalou un novo estilo";
 "New style body" = "O estilo \"%@\" foi instalado no cartafol correspondente e engadido ao menú Estilos.";
-"More Styles..." = "Máis estilos...";
+"More Styles…" = "Máis estilos…";
 "Delete selected message" = "Estás seguro de eliminar permanentemente os artigos seleccionados?";
 "Delete selected message text" = "Esta operación non pode ser desfeita.";
 "Cancel" = "Cancelar";
@@ -65,8 +65,8 @@
 "From" = "De";
 "To" = "Para";
 "(No title)" = "(Sen título)";
-"Refreshing folder images..." = "Actualizando as iconas dos cartafoles...";
-"Refreshing subscriptions..." = "Actualizando as subscricións...";
+"Refreshing folder images…" = "Actualizando as iconas dos cartafoles…";
+"Refreshing subscriptions…" = "Actualizando as subscricións…";
 "Authenticating with user name '%@'" = "Autenticando co nome de usuario \"%@\"";
 "No new articles available" = "Non hai novos artigos dispoñibles";
 "%d new articles retrieved" = " Recuperados %d novos artigos";
@@ -86,7 +86,7 @@
 "Error parsing XML data in feed" = "Erro ao analizar os datos XML da fonte";
 "Retrieving folder image" = "Recuperando a icona do cartafol";
 "Folder image retrieved from %@" = "Icona do cartafol recuperada de %@";
-"Contacting..." = "Conectando...";
+"Contacting…" = "Conectando…";
 "Connect Running" = "Conexión iniciada";
 "Connect Running text" = "Desexas cancelar a conexión e saír de Vienna agora?";
 "Delete group folder" = "Eliminar cartafol de grupo";
@@ -97,7 +97,7 @@
 "Delete RSS feed" = "Eliminar subscrición";
 "Delete multiple folders text" = "Realmente queres eliminar todos os cartafoles seleccionados? Esta operación non se pode desfacer.";
 "Delete multiple folders" = "Eliminar varios cartafoles";
-"Delete folder status" = "Eliminando cartafol \"%@\"...";
+"Delete folder status" = "Eliminando cartafol \"%@\"…";
 "An error has occurred" = "Algo fallou.";
 "Your software is up to date" = "A túa versión de Vienna está actualizada.";
 "Please try again later" = "Por favor, téntao máis tarde.";
@@ -120,7 +120,7 @@
 "Unread Articles" = "Artigos non lidos";
 "Today's Articles" = "Artigos de hoxe";
 "Trash" = "Lixo";
-"Select..." = "Seleccionar...";
+"Select…" = "Seleccionar…";
 " (%d unread)" = " (%d non lidos)";
 "is" = "é";
 "is not" = "non é";
@@ -149,14 +149,14 @@
 "Recents" = "Recentes";
 "Clear" = "Baleirar as buscas recentes";
 "Search web page" = "Procurar páxina web";
-"Loading..." = "Cargando...";
+"Loading…" = "Cargando…";
 "Open Image in New Tab" = "Abrir imaxe nunha nova lapela";
 "Open Link in New Tab" = "Abrir ligazón nunha nova lapela";
 "Open Link in %@" = "Abrir ligazón en %@";
 "Open Page in %@" = "Abrir páxina en %@";
 "Copy Page Link to Clipboard" = "Copiar ligazón da páxina ao portapapeis";
 "%d unread articles" = "%d artigos sen ler";
-"More Scripts..." = "Máis scripts...";
+"More Scripts…" = "Máis scripts…";
 "Install Update" = "Instalar a actualización";
 "Do Not Install" = "Non instalar";
 "Replace smart folder title" = "Xa existe un cartafol chamado %@";
@@ -224,30 +224,30 @@
 "Cut" = "Cortar";
 "Delete" = "Eliminar";
 "Delete Article" = "Eliminar artigo";
-"Delete…" = "Eliminar...";
+"Delete…" = "Eliminar…";
 "Edit" = "Edición";
-"Edit…" = "Editar...";
+"Edit…" = "Editar…";
 "Empty Trash" = "Baleirar o lixo";
-"Export Subscriptions…" = "Exportar subscricións...";
+"Export Subscriptions…" = "Exportar subscricións…";
 "File" = "Arquivo";
 "Find" = "Procurar";
 "Find Next" = "Procurar seguinte";
 "Find Previous" = "Procurar anterior";
-"Find…" = "Procurar...";
+"Find…" = "Procurar…";
 "Forward" = "Adiante";
 "Help" = "Axuda";
 "Hide Others" = "Ocultar outros";
 "Hide Vienna" = "Ocultar Vienna";
-"Import Subscriptions…" = "Importar subscricións...";
+"Import Subscriptions…" = "Importar subscricións…";
 "Jump to Selection" = "Ir 	á selección";
 "Main Window" = "Xanela principal";
 "MainMenu" = "Menú principal";
 "Mark All Articles as Read" = "Marcar todos os artigos como lidos";
 "Mark Flagged" = "Marcar como destacado";
 "Minimize" = "Minimizar";
-"New Group Folder…" = "Novo cartafol de grupo...";
-"New Smart Folder…" = "Novo cartafol intelixente...";
-"New Subscription…" = "Nova subscricións...";
+"New Group Folder…" = "Novo cartafol de grupo…";
+"New Smart Folder…" = "Novo cartafol intelixente…";
+"New Subscription…" = "Nova subscricións…";
 "Next Tab" = "Lapela seguinte";
 "Open Article Page" = "Abrir páxina do artigo";
 "Open Article Page in External Browser" = "Abrir páxina do artigo nun navegador externo";
@@ -255,14 +255,14 @@
 "Open Subscription Home Page in External Browser" = "Abrir páxina da subscrición nun navegador externo";
 "Page Setup…" = "Configurar páxina…";
 "Paste" = "Pegar";
-"Preferences…" = "Preferencias...";
+"Preferences…" = "Preferencias…";
 "Previous Tab" = "Lapela anterior";
-"Print…" = "Imprimir...";
+"Print…" = "Imprimir…";
 "Quit Vienna" = "Saír de Vienna";
 "Redo" = "Refacer";
 "Refresh Selected Subscriptions" = "Actualizar subscricións seleccionadas";
 "Reload Page" = "Volver a cargar a páxina";
-"Rename…" = "Renomear...";
+"Rename…" = "Renomear…";
 "Restore Article" = "Restaurar artigo";
 "Select All" = "Seleccionar todo";
 "Services" = "Servizos";
@@ -270,7 +270,7 @@
 "Skip Folder" = "Omitir cartafol";
 "Sort By" = "Clasificar por";
 "Spelling" = "Ortografía";
-"Spelling…" = "Ortografía...";
+"Spelling…" = "Ortografía…";
 "Stop Refreshing" = "Cancelar actualización";
 "Stop Reloading Page" = "Deixar de recargar a páxina";
 "Style" = "Estilo";
@@ -319,14 +319,14 @@
 "%u unread" = "%u sen ler";
 "Keyboard Shortcuts" = "Atallos de teclado";
 "%@ (Filtered: %@)" = "%@ (Filtrado: %@)";
-"Get Info..." = "Obter información...";
-"Open Web Location..." = "Abrir ubicación...";
+"Get Info…" = "Obter información…";
+"Open Web Location…" = "Abrir ubicación…";
 "Refresh Folder Images" = "Actualizar as iconas dos cartafoles";
 "Report" = "Horizontal";
 "Condensed" = "Vertical";
 "Unified" = "Unificado";
 "Summary" = "Resumo";
-"Blog With..." = "Publicar nun blog con";
+"Blog With…" = "Publicar nun blog con";
 "Blog with %@" = "Publicar nun Blog con %@";
 "Bigger Text" = "Aumentar o tamaño do texto";
 "Smaller Text" = "Reducir o tamaño do texto";
@@ -348,7 +348,7 @@
 "Local File" = "Arquivo local";
 "Hide Status Bar" = "Ocultar barra de estado";
 "Show Status Bar" = "Amosar barra de estado";
-"Customize Toolbar..." = "Personalizar barra de ferramentas...";
+"Customize Toolbar…" = "Personalizar barra de ferramentas…";
 "Search Articles" = "Procurar artigos";
 "Progress" = "Progreso";
 "Delete all articles in the trash" = "Eliminar todos os artigos do papeleiro";
@@ -399,7 +399,7 @@
 
 /* Added in 2.6.0 */
 "Article load completed" = "Completouse a carga do artigo";
-"Loading HTML article..." = "Cargando artigos HTML...";
+"Loading HTML article…" = "Cargando artigos HTML…";
 "Ascending" = "Ascendente";
 "Descending" = "Descendente";
 "Use Current Style for Articles" = "Empregar estilo actual para os artigos";
@@ -421,7 +421,7 @@
 "Authenticating on Open Reader" = "Autenticando en Open Reader";
 "Connecting to Open Reader server to retrieve %@" = "Conectando có servidor Open Reader para recuperar %@";
 "Retrieving folder image for Open Reader Feed" = "Recuperando a icona do cartafol para a fonte de Open Reader";
-"Fetching Open Reader Subscriptions..." = "Procurando subscricións de Open Reader...";
+"Fetching Open Reader Subscriptions…" = "Procurando subscricións de Open Reader…";
 "Open Reader Authentication Failed" = "Erro ao autenticar en Open Reader";
 "Open Reader Authentication Failed text" = "Asegúrate de que o nome de usuario e o contrasinal precisos para acceder ao servidor de Open Reader foron inseridos correctamente nas preferencias de Vienna.\nComproba tamén o teu acceso a internet.";
 
@@ -434,11 +434,11 @@
 "Include anonymous system profile when checking for updates?" = "Incluir perfil anónimo do sistema ao procurar actualizacións?";
 "Include anonymous system profile when checking for updates text" = "Isto axuda ao desenrola de Viena ao informar de que versións de Mac OS X son máis populares entre os nosos usuarios.";
 "Error: Feed not found!" = "Erro: Fonta non atopada!";
-"Loading" = "A cargar...";
+"Loading" = "A cargar…";
 "Plugin could not be installed" = "O plugin non se puido instalar";
 "Vienna failed to install the plugin." = "Vienna fallou ao instalar o plugin.";
 "Queue" = "Cola";
-"Forcing Refresh subscriptions..." = "A forzar a actualización de subscricións...";
+"Forcing Refresh subscriptions…" = "A forzar a actualización de subscricións…";
 "Improper infinitely looping URL redirect to %@" = "Redirixir URL infinitamente cíclica a %@";
 
 /* Added in 3.0.2 */
