--- a/Interfaces/ja.lproj/Localizable.strings
+++ b/Interfaces/ja.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 "Mark Unflagged" = "フラグなし";
 "Articles" = "記事";
 "Folders" = "フォルダ";
-"Loading %@..." = "ロード中 %@...";
+"Loading %@…" = "ロード中 %@…";
 "Completed" = "終了";
 "Refresh RSS feeds" = "購読を更新";
 "Refresh All Subscriptions" = "すべての購読を更新";
@@ -57,7 +57,7 @@
 "Refresh all your subscriptions" = "すべての購読を更新";
 "New style title" = "Vienna に新しいスタイルが追加されました";
 "New style body" = "スタイル \"%@\" はスタイルフォルダにインストールされました。スタイルメニューから選択できます。";
-"More Styles..." = "他のスタイル...";
+"More Styles…" = "他のスタイル…";
 "Delete selected message" = "選択された記事を完全に消去してもよろしいですか？";
 "Delete selected message text" = "この操作を元に戻すことはできません。";
 "Cancel" = "キャンセル";
@@ -65,8 +65,8 @@
 "From" = "送信者";
 "To" = "宛先";
 "(No title)" = "(No subject)";
-"Refreshing folder images..." = "Refreshing folder images...";
-"Refreshing subscriptions..." = "購読を更新...";
+"Refreshing folder images…" = "Refreshing folder images…";
+"Refreshing subscriptions…" = "購読を更新…";
 "Authenticating with user name '%@'" = "ユーザ名 \"%@\" で認証中";
 "No new articles available" = "新着記事はありません";
 "%d new articles retrieved" = "%d の新着記事があります";
@@ -86,7 +86,7 @@
 "Error parsing XML data in feed" = "フィードの XML データ解析にエラーがあります。";
 "Retrieving folder image" = "フォルダイメージを取得中";
 "Folder image retrieved from %@" = "%@ 空フォルダイメージを取得";
-"Contacting..." = "接続中...";
+"Contacting…" = "接続中…";
 "Connect Running" = "現在接続中です";
 "Connect Running text" = "接続を中止して Vienna を閉じますか？";
 "Delete group folder" = "グループフォルダを削除";
@@ -97,7 +97,7 @@
 "Delete RSS feed" = "購読を削除";
 "Delete multiple folders text" = "選択されている %d のフォルダをすべて削除してもよろしいですか？この操作を元に戻すことはできません。";
 "Delete multiple folders" = "複数のフォルダを削除";
-"Delete folder status" = "フォルダ \"%@\" を削除中...";
+"Delete folder status" = "フォルダ \"%@\" を削除中…";
 "An error has occurred" = "エラーが発生しました。";
 "Your software is up to date" = "お使いのソフトウェアは最新のものです。";
 "Please try again later" = "後でもう一度お試しください。";
@@ -120,7 +120,7 @@
 "Unread Articles" = "未読の記事";
 "Today's Articles" = "今日の記事";
 "Trash" = "ゴミ箱";
-"Select..." = "選択...";
+"Select…" = "選択…";
 " (%d unread)" = " (%d 未読)";
 "is" = "が";
 "is not" = "が次でない：";
@@ -149,14 +149,14 @@
 "Recents" = "最近";
 "Clear" = "最近の検索を消去";
 "Search web page" = "ウェブページを検索";
-"Loading..." = "ロード中...";
+"Loading…" = "ロード中…";
 "Open Image in New Tab" = "イメージを新規タブで開く";
 "Open Link in New Tab" = "リンクを新規タブで開く";
 "Open Link in %@" = "%@ でリンクを開く";
 "Open Page in %@" = "%@ でページを開く";
 "Copy Page Link to Clipboard" = "リンクタグをコピー";
 "%d unread articles" = "%d の未読記事";
-"More Scripts..." = "スクリプト...";
+"More Scripts…" = "スクリプト…";
 "Install Update" = "インストール";
 "Do Not Install" = "インストールしない";
 "Replace smart folder title" = "%@ という名前のスマートフォルダはすでに使用されています。";
@@ -276,7 +276,7 @@
 "Style" = "スタイル";
 "Undo" = "取り消し";
 "Use Selection for Find" = "選択部分を検索";
-"Validate Feed" = "フィードの確認...";
+"Validate Feed" = "フィードの確認…";
 "Vienna Help" = "Vienna ヘルプ";
 "Vienna Web Site" = "Vienna ホームページ";
 "View" = "表示";
@@ -319,14 +319,14 @@
 "%u unread" = "%u 未読";
 "Keyboard Shortcuts" = "キーボードショートカット";
 "%@ (Filtered: %@)" = "%@ (フィルタ: %@)";
-"Get Info..." = "情報を見る...";
-"Open Web Location..." = "Web ページを開く...";
+"Get Info…" = "情報を見る…";
+"Open Web Location…" = "Web ページを開く…";
 "Refresh Folder Images" = "フォルダイメージを更新";
 "Report" = "レポート";
 "Condensed" = "凝縮";
 "Unified" = "統一";
 "Summary" = "要約";
-"Blog With..." = "このソフトでブログする...";
+"Blog With…" = "このソフトでブログする…";
 "Blog with %@" = "このソフトでブログする %@";
 "Bigger Text" = "Bigger Text";
 "Smaller Text" = "Smaller Text";
@@ -348,7 +348,7 @@
 "Local File" = "Local File";
 "Hide Status Bar" = "Hide Status Bar";
 "Show Status Bar" = "Show Status Bar";
-"Customize Toolbar..." = "Customize Toolbar...";
+"Customize Toolbar…" = "Customize Toolbar…";
 "Search Articles" = "Search Articles";
 "Progress" = "Progress";
 "Delete all articles in the trash" = "Delete all articles in the trash";
@@ -399,7 +399,7 @@
 
 /* Added in 2.6.0 */
 "Article load completed" = "Article load completed";
-"Loading HTML article..." = "Loading HTML article...";
+"Loading HTML article…" = "Loading HTML article…";
 "Ascending" = "Ascending";
 "Descending" = "Descending";
 "Use Current Style for Articles" = "Use Current Style for Articles";
@@ -420,7 +420,7 @@
 "Authenticating on Open Reader" = "Authenticating on Open Reader";
 "Connecting to Open Reader server to retrieve %@" = "Connecting to Open Reader server to retrieve %@";
 "Retrieving folder image for Open Reader Feed" = "Retrieving folder image for Open Reader Feed";
-"Fetching Open Reader Subscriptions..." = "Fetching Open Reader Subscriptions...";
+"Fetching Open Reader Subscriptions…" = "Fetching Open Reader Subscriptions…";
 "Open Reader Authentication Failed" = "Open Reader Authentication Failed";
 "Open Reader Authentication Failed text" = "Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences.\nAlso check your network access.";
 
@@ -437,7 +437,7 @@
 "Plugin could not be installed" = "Plugin could not be installed";
 "Vienna failed to install the plugin." = "Vienna failed to install the plugin.";
 "Queue" = "Queue";
-"Forcing Refresh subscriptions..." = "Forcing Refresh subscriptions...";
+"Forcing Refresh subscriptions…" = "Forcing Refresh subscriptions…";
 "Improper infinitely looping URL redirect to %@" = "Improper infinitely looping URL redirect to %@";
 
 /* Added in 3.0.2 */
