--- a/Interfaces/nl.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/nl.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Wanneer nieuwe ongelezen artikelen zijn opgehaald:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Andere...";
+"FiK-E7-RnG.title" = "Andere…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Zoek naar nieuwere versie bij het starten";
