--- a/Interfaces/pt-BR.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/pt-BR.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Quando novos artigos são recebidos:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Outro...";
+"FiK-E7-RnG.title" = "Outro…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Verificar novas versões do Vienna ao iniciar";
