--- a/Interfaces/ru.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/ru.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "При получении новых статей:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Иное...";
+"FiK-E7-RnG.title" = "Иное…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Проверять наличие новых версий Vienna при запуске";
