--- a/Interfaces/sv.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/sv.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "När nya olästa artiklar är mottagna:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Annan...";
+"FiK-E7-RnG.title" = "Annan…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Leta efter uppdateringar av Vienna vid uppstart";
