--- a/Interfaces/tr.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/tr.lproj/GeneralPreferencesView.strings
@@ -17,7 +17,7 @@
 "BbI-0A-zEG.title" = "Yeni okunmamış makale alındığında:";
 
 /* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Diğer...";
+"FiK-E7-RnG.title" = "Diğer…";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Başlangıçta Vienna'nın yeni sürümünü kontrol et";
